oicp/.sre/k8s/pre-production/secret-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 6
  labels:
    app.kubernetes.io/instance: oicp-secrets-server
  name: oicp-secrets-server
  namespace: backend
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: oicp-secrets-server
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: oicp-secrets-server
    spec:
      serviceAccountName: aws-qa-iam-role
      containers:
        - args:
            - nginx
            - -g
            - daemon off;
          image: 348090157910.dkr.ecr.eu-west-1.amazonaws.com/nginx-1.26.1
          imagePullPolicy: Always
          name: oicp-secrets-server
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: oicp-secrets-volume
              mountPath: "/mnt/secrets-store"
          resources:
            limits:
              cpu: 70m
              memory: 150Mi
            requests:
              cpu: 40m
              memory: 80Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
        - name: oicp-secrets-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: oicp-secrets-provider-class
